kubernete_yaml/pizza_catalogue/pizza_catalogueingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pizza-catalogue-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mspizza-catalogue.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pizza-catalogue-inservice
            port:
              number: 8086
